--- a/style.css
+++ b/style.css
@@ -1,35 +1,51 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-
-body {
-    font-family: "Arial", sans-serif;
-    background-repeat: no-repeat;
-
-    background-size: cover;
-    background: url('https://images.pexels.com/photos/1631677/pexels-photo-1631677.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500');
-}
-
-
 section {
-    text-align: center;
+    height: 100vh;
+    display: flex;
+    /*justify-content: center;
+    align-items: center;*/
 }
 
-.game--container {
-    display: grid;
-    grid-template-columns: repeat(3, auto);
-    width: 306px;
-    margin: 50px auto;
+.calculator{
+    width: 400px;
+    height: 500px;
+     background-color: rgb(104, 104, 238);
+    border-radius: 1rem;
+  
 }
 
-.cell {
-    font-family: "Permanent Marker", cursive;
-    width: 100px;
+#display{
     height: 100px;
-    box-shadow: 0 0 0 1px #333333;
-    border: 1px solid #333333;
-    cursor: pointer;
+    background-color: white;
+    width: 350px;
+    margin: 2rem auto;
+}
+#values, #answer{
+    text-align: right;
+    margin-right: 10px;
+    font-size: 30px;
+}
+#answer{
+    font-size: 50px;
+    margin-top: 15px;
+}
 
-    line-height: 100px;
-    font-size: 60px;
+.buttons{
+    width: 360px;
+    margin: 0rem auto;
+    display: flex;
+    background-color: purple;
+}
+.buttons-list button{
+    width: 50px;
+    height: 50px;
+    margin: 10px 12px 10px 0;
+    background-color: rgba(0, 0, 0, 0.308);
+    color: white;
+}
+.symbols button{
+    width: 70px;
+    height: 50px;
+    margin: 10px 0 10px 16px;
+    background-color: white;
+    color: black;
 }
